# tmux-copy

./: Cargo.toml  README.md  tmux-copy.tmux
src/: ansi.rs  boot.rs  find.rs  hint.rs  lib.rs  main.rs  term.rs  tmux.rs  util.rs
