[package]
name = "tmux-copy"
version = "0.1.0"
authors = ["Newton Ni <nwtnni@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
libc = "0.2.62"

[dependencies.regex]
version = "1.3.1"
default-features = false
features = ["std", "perf"]
