[package]
name = "tmux-copy"
version = "0.1.0"
authors = ["Newton Ni <nwtnni@gmail.com>"]
edition = "2018"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clipboard = "0.5.0"
lazy_static = "1.4.0"
libc = "0.2.62"
uuid = { version = "0.7.4", features = ["v4"] }

[dependencies.regex]
version = "1.3.1"
default-features = false
features = ["std", "perf"]

[[bin]]
name = "boot"
path = "src/boot.rs"

[[bin]]
name = "main"
path = "src/main.rs"
