[package]
name = "tmux-copy"
version = "0.1.0"
authors = ["Newton Ni <nwtnni@gmail.com>"]
edition = "2021"

[features]
default = ["fade"]
fade = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
copypasta-ext = "0.4"
once_cell = "1.17"
libc = "0.2"
paste = "1.0"

[dependencies.regex]
version = "1.7"
default-features = false
features = ["std", "perf"]
